--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Oxford Handbook of Clinical Dentistry - 50 MCQ Test</h1>
+  <h1>Oxford Handbook of Clinical Dentistry - MCQ Practice</h1>
   <div id="quizContainer">
     <form id="quizForm"></form>
     <p id="result"></p>
